--- a/src/components/ui/BurgerMenu/styles/style.scss
+++ b/src/components/ui/BurgerMenu/styles/style.scss
@@ -2,27 +2,44 @@
 
 .burger-menu {
   position: fixed;
-  width: 100vw;
+  width: 60vw;
   height: 100vh;
-  background: rgba($dark, 0.1);
+  min-width: 200px;
+  background: rgba(#fff, 0.5);
   backdrop-filter: blur(10px);
+  box-shadow: 0 0 20px rgba($dark, 0.1);
   z-index: 100;
   transition: 300ms ease all;
   padding: 20px 0;
+  font-size: 1.2em;
 
   &--closed {
-    transform: translateX(100%);
+    transform: translateX(-100%);
   }
 
   &--opened {
     transform: translateX(0);
   }
 
+  &__logo,
+  .logo {
+    width: 100%;
+    padding: 0 20px;
+    @include flex-centered();
+
+    &__inner {
+      height: 30px;
+
+      & * {
+        fill: $dark;
+      }
+    }
+  }
+
   &__options,
   .options {
     display: flex;
     flex-direction: column;
-    font-size: 1.3em;
     padding: 30px 0;
 
     &__option,
@@ -54,12 +71,12 @@
 
   &__close-button.button {
     position: absolute;
-    bottom: 50px;
+    bottom: 30px;
     width: 100%;
 
     .button__icon {
-      height: 2em;
-      width: 2em;
+      height: 1.8em;
+      width: 1.8em;
     }
   }
 }
